--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "build":"npm install && npm install --prefix client && npm run build --prefix client ",
-    "dev":"nodemon index.js"
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "dev":"nodemon api/index.js"
+    
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,43 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.1.19",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axion": "^0.1.0",
+    "axios": "^0.27.2",
+    "date-fns": "^2.30.0",
+    "react": "^18.3.1",
+    "react-date-range": "^1.4.0",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
+  
 }
+
