--- a/api/package.json
+++ b/api/package.json
@@ -1,29 +1,8 @@
 {
-  "name": "booking-mern",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "dev":"nodemon api/index.js"
-    
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.1",
-    "nodemon": "^2.0.22",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -41,7 +20,13 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev":"nodemon index.js"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -59,7 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
-  
+  },
+  "proxy": "http://localhost:8800/api"
 }
-
